--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && echo > dist/.nojekyll",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
